cambios de gib hub

--- a/penta.html
+++ b/penta.html
@@ -5,7 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MI MUNDO</title>
-    <P> esto apenas comienza</P>
+    <P> Ya vamos a comer rico owo /P>
+        <p>y vamos al cine ;3</p>
 </head>
 <body>
     
